# OpenAPI/contract.yml
@@ -22,7 +22,7 @@ tags:
 
 paths:
   # Orders endpoints
-  /order:
+  /admin/order:
     get:
       tags:
         - Orders
@@ -48,7 +48,7 @@ paths:
           content:
             application/json;charset=utf-8:
               schema:
-                $ref: '#/components/schemas/orders'
+                $ref: '#/components/schemas/PaginatedOrderResponse'
               examples:
                 ordersExample:
                   $ref: '#/components/examples/ordersExample'
@@ -59,6 +59,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CustomError'
 
+  /order:
     post:
       tags:
         - Orders
@@ -70,7 +71,7 @@ paths:
         content:
           application/json;charset=utf-8:
             schema:
-              $ref: '#/components/schemas/order'
+              $ref: '#/components/schemas/orderRequest'
             example:
               customer:
                 id: 1
@@ -87,7 +88,7 @@ paths:
           content:
             application/json;charset=utf-8:
               schema:
-                $ref: '#/components/schemas/order'
+                $ref: '#/components/schemas/orderResponse'
         '400':
           description: Invalid request body (missing fields, invalid format)
           content:
@@ -107,7 +108,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CustomError'
 
-  /order/{id}:
+  /admin/order/{id}:
     get:
       tags:
         - Orders
@@ -128,7 +129,7 @@ paths:
           content:
             application/json;charset=utf-8:
               schema:
-                $ref: '#/components/schemas/order'
+                $ref: '#/components/schemas/orderResponse'
         '404':
           description: Order not found
           content:
@@ -141,22 +142,24 @@ paths:
       tags:
         - Orders
       summary: Find Previous orders For Logged In Customer
-      description: Retrieve a all orders by logged in customer id
+      description: Retrieve all orders by logged-in customer id
       operationId: findPreviousOrders
-
       responses:
         '200':
-          description: Successfully retrieved the order
+          description: Successfully retrieved the orders
           content:
             application/json;charset=utf-8:
               schema:
-                $ref: '#/components/schemas/orders'
+                type: array
+                items:
+                  $ref: '#/components/schemas/orderResponse'
         '404':
           description: Order not found
           content:
             application/json;charset=utf-8:
               schema:
                 $ref: '#/components/schemas/CustomError'
+
 
     delete:
       tags:
@@ -208,14 +211,14 @@ paths:
                 items:
                   type: array
                   items:
-                    $ref: '#/components/schemas/orderItem'
+                    $ref: '#/components/schemas/orderItemRequest'
       responses:
         '200':
           description: Successfully updated the order
           content:
             application/json;charset=utf-8:
               schema:
-                $ref: '#/components/schemas/order'
+                $ref: '#/components/schemas/orderResponse'
         '400':
           description: Invalid update request
           content:
@@ -239,7 +242,8 @@ paths:
   /customer:
     get:
       summary: Get all customers (paginated)
-      tags: ["Customers"]
+      tags:
+        - Customers
       parameters:
         - name: page
           in: query
@@ -577,15 +581,40 @@ paths:
 components:
   schemas:
     # Order-related schemas
-    orders:
+    PaginatedOrderResponse:
       type: object
       properties:
-        orders:
+        content:
           type: array
           items:
-            $ref: '#/components/schemas/order'
+            $ref: '#/components/schemas/orderResponse'
+        page:
+          type: integer
+        size:
+          type: integer
+        totalElements:
+          type: integer
+        totalPages:
+          type: integer
 
-    order:
+
+    orderRequest:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        status:
+          type: string
+          enum: [PLACED, PROCESSING, COMPLETED, CANCELLED]
+        customer:
+          $ref: '#/components/schemas/CustomerReference'
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/orderItemRequest'
+
+    orderResponse:
       type: object
       properties:
         id:
@@ -601,13 +630,24 @@ components:
           type: string
           enum: [PLACED, PROCESSING, COMPLETED, CANCELLED]
         customer:
-          $ref: '#/components/schemas/customer'
+          $ref: '#/components/schemas/CustomerReference'
         items:
           type: array
           items:
-            $ref: '#/components/schemas/orderItem'
+            $ref: '#/components/schemas/orderItemResponse'
 
-    orderItem:
+    orderItemRequest:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        quantity:
+          type: integer
+        book:
+          $ref: '#/components/schemas/BookRequestDto'
+
+    orderItemResponse:
       type: object
       properties:
         id:
@@ -619,10 +659,11 @@ components:
           type: number
           format: float
         book:
-          $ref: '#/components/schemas/book'
+          $ref: '#/components/schemas/BookResponseDto'
+
 
     # Customer-related schemas
-    customer:
+    CustomerReference:
       type: object
       properties:
         id:
@@ -634,14 +675,9 @@ components:
     Customer:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         email:
           type: string
         username:
-          type: string
-        password:
           type: string
         address:
           type: string
@@ -684,6 +720,37 @@ components:
         price:
           type: number
           format: float
+
+    BookResponseDto:
+      type: object
+      required:
+        - isbn
+        - title
+        - author
+      properties:
+        isbn:
+          type: string
+          pattern: '^(97[89])?[0-9]{9}[0-9X]$'
+          description: 'International Standard Book Number (ISBN-10 or ISBN-13)'
+          example: '9780134685991'
+        author:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        price:
+          type: number
+          format: float
+
+    BookRequestDto:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: integer
+          format: int64
 
     # Admin-related schemas
     Admin:
